# erd_rs

./: Cargo.toml  README.md
examples/example-project/: Cargo.toml  ER.mmd
examples/example-project/src/: gene_model.rs  lib.rs  organism_model.rs
src/: formaters.rs  lib.rs  main.rs
src/formaters/: mmd_formater.rs
